[EMPTY] Formatting with configured formatter.